История состояний: картина заказа и денег на любой прошлый момент, итоги за период
